--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -1,5 +1,4 @@
 #home {
-  background-color: #D23333;
   color: white;
   height: 100vh;
   display: flex;
@@ -10,7 +9,7 @@
     margin-top: 1.5em;
   }
   a {
-    color: rgba(0,0,0,0.4);
+    color: white;
     font-weight: bold;
     font-size: 16px;
   }
