Added CSS for colors and fonts to over-ride Bootstrap theme

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -13,11 +13,20 @@ title: Le Wagon - Middleman
         <%= link_to "More about this template", "about.html" %>
       </p>
       <%= link_to "Meet the team", "team.html", class: "btn btn-primary" %>
-
     </div>
   </div>
 </div>
-  <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/shanghai');">
+<div class="wrapper">
+  <div class="card" >
+    <div class="card-category">Popular</div>
+    <div class="card-description">
+      <h2>Le Wagon Shanghai</h2>
+      <p>Very cool city, the best</p>
+    </div>
+    <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
+    <a class="card-link" href="#" ></a>
+  </div>
+  <div class="card" >
     <div class="card-category">Popular</div>
     <div class="card-description">
       <h2>Le Wagon Shanghai</h2>
@@ -27,3 +36,4 @@ title: Le Wagon - Middleman
     <a class="card-link" href="#" ></a>
   </div>
 </div>
+
