--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -1,10 +1,11 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #EE5F5B;
-$blue: #469AE0;
-$yellow: #FDB631;
-$orange: #E67E22;
-$green: #32B796;
-$gray: #000000;
-$light-gray: #F4F4F4;
+$red: #9e5058;
+$blue: #666ba3;
+$yellow: #f7ed60;
+$orange: #e88e40;
+$green: #89d66f;
+$gray: #616668;
+$light-gray: #e5e5e5;
+$lighter-gray: #f7f7f7
